--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -251,22 +251,39 @@
  CB_ALLOWED_po_imperial_domination: "Imperial Domination"
  
 
- request_kingship_title: "Request Kingship"
- request_kingship_desc: "To solidify our claims to this land, we may requests the emperor of the Saelian Empire to grant us is grace and elevate our ruler to a mighty king."
- saelian.4.t: "Prince Requests kingship"
- saelian.4.desc: "Earlier this morning a delegation came from one of our prince's regarding granting them a title of kingdom. They argue that this will make collecting imperial taxes easier and potentially be a greater help to the emperor during a time of need. How shall we respond?"
- saelian.4.a: "Looks like we have a new king in town!"
+ request_kingship_title: "Request Kuninstofship"
+ request_kingship_desc: "The title of Kuninstof is almost as ancient as the empire itself, having its roots during the Saelian conquests of Silvestria. It was originally granted to local rulers willing to become emperor's subjects in exchange for support in consolidating the land. While none of the Kuninstof have survived to our times, with the delamination of the nobility there is an argument to restore this archaic title to solve empire's complex internal bureaucracy."
+ saelian.4.t: "Prince Requests Kuninstofship"
+ saelian.4.desc: "Earlier this morning a delegation came from one of our prince's regarding granting them a title of Kuninstof. They argue that this will make collecting imperial taxes easier and potentially be a greater help to the emperor during a time of need. How shall we respond?"
+ saelian.4.a: "Looks like we have a new Kuninstof in town!"
  saelian.4.b: "Preposterous..."
+ saelian.4.tt: "If the emperor accepts your proposal, you will increase your government rank and be exempted from seizing unlawful territory until the death of your current ruler."
+ saelian.4.tt2: "If you accept their proposal, they will increase their government ranka and be exempted from unlawful land seizure until the death of their current ruler."
+ saelian.4.tt3: "If you do not accept, they will have a greater chance of leaving the empire."
 
  saelian.5.t: "Emperor Accepted!"
- saelian.5.desc: "Imperial legate came bringing good news - the emperor accepted our petition to become a king."
+ saelian.5.desc: "Imperial legate came bringing good news - the emperor accepted our petition to become a Kuninstof."
  saelian.5.a: "Let's start planning the coronation."
- emperor_granted_kingship: "Kingship Granted"
+ emperor_granted_kingship: "Kuninstofship Granted"
+
+ KUNINSTOFTUM: "Kuninstoftum"
+ KUNINSTOF: "Kuninstof"
+ KUNINSTOFIN: "Kuninstofin"
+ PIETY_E: "Universalism"
+ DEVELOPMENT_E: "Development"
+ DYNASTY_E: "Same Dynasty"
 
  saelian.6.t: "Emperor Declined!"
  saelian.6.desc: "Sad news coming from the imperial capital - emperor has declined our petition."
  saelian.6.a: "..."
- emperor_not_granted_kingship: "Kingship Rejected"
+ emperor_not_granted_kingship: "Kuninstofship Rejected"
+
+ kuninstof_rightful_vassalization_title: "Righftul Vassalization"
+ kuninstof_rightful_vassalization_desc: "We will use our status as Kuninstof to transfer vassalage of the [From.GovernmentName] of [From.Owner.GetName] from the emperor to us.\nIf the vassalization succeeds, they will inherit our color, have greatly reduced liberty desire and no penalty to force limit from being our subject. They will lose this modifier if we leave the empire."
+ kuninstof_rightful_vassalization_tooltip: "We will use our status as Kuninstof to transfer vassalage of the [From.GovernmentName] of [From.Owner.GetName] from the emperor to us."
+ kuninstof_rightful_vassalization_dialog: "The [This.GovernmentName] of [This.Owner.GetName] is requesting that we become their vassal. How should we respond?"
+ kuninstof_loyal_vassal_mod: "Loyal Vassal"
+ desc_kuninstof_loyal_vassal_mod: "Due to our high status in the empire and protection of the emperor, our subjects are not so keen to rebel."
 
  unite_saelians_title: "Unify Saelianism"
  unite_saelians_desc: "Bringing Unity to the Saelian faith will solidify us as the rulers of the world. Pro Deo!"
