--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -24,7 +24,7 @@
  luetan_monarchy_reform_desc: "This governments is heavily influenced by Taowang philosophy and Tsutan believes in greatness of nature and human ecosystem, trying to keep it intact."
  beidao_alliance_reform: "Beidao Alliance"
  beidao_alliance_reform_desc: "Cities of northern Henling formed a tight alliance with a single electable leader to protect against northern hordes and southern regimes."
- tszelapsheng_reform: "Tszelapsheng"
+ tszelapsheng_reform: "Tshelapsheng"
  tszelapsheng_reform_desc: "Eastern Tsutan was historically compromised of various city-states of which only 2 survived to this day, keeping the tradition of commerce and maritime influence."
  kaansuentin_reform: "Kaansuentin"
  kaansuentin_reform_desc: "Huangchan theocracies justify their rule as heavenly blessing - rules are chosen by magic prophecies."
