religious schools part 1 + fixes

--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -110,3 +110,29 @@
  untameable_fervor_mod: "Untameable Fervor"
  desc_untameable_fervor_mod: "Our people are ready to declare a war against infidels."
  call_crusade_block_tt: "We need to have either 'Untameable Fervor' or 'Vicarial Sanction of War' modifiers in order to declare the Bellum Angelicum."
+
+ palmisianist_school: "Palmisianist"
+ palmisianist_school_desc: ""
+ palmisianist_scholar_modifier: "Palmisianist Scholars"
+ reinist_school: "Reinist"
+ reinist_school_desc: ""
+ reinist_scholar_modifier: "Reinist Scholar"
+ angelist_school: "Angelist"
+ angelist_school_desc: ""
+ angelist_scholar_modifier: "Angelist Scholar"
+ cesaronist_school: "Cesaronist"
+ cesaronist_school_desc: ""
+ cesaronist_scholar_modifier: "Cesaronist Scholar"
+ gentenist_school: "Gentenist"
+ gentenist_school_desc: ""
+ gentenist_scholar_modifier: "Gentenist Scholar"
+ communalist_school: "Communalist"
+ communalist_school_desc: ""
+ communalist_scholar_modifier: "Communalist Scholar"
+
+ is_school_enabled_reinist_school: "Reinist school of thought is active."
+ is_school_enabled_palmisianist_school: "Palmisianist school of thought is active."
+ is_school_enabled_angelist_school: "Angelis school of thought is active."
+ is_school_enabled_cesaronist_school: "Cesaronist school of thought is active."
+ is_school_enabled_gentenist_school: "Gentenist school of thought is active."
+ is_school_enabled_communalist_school: "Communalist school of thought is active."
