--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -63,10 +63,10 @@
  emperor_revive_imperial_inquisition_title: "Revive Imperial Inquisition"
  emperor_revive_imperial_inquisition: "Revived Imperial Inquisition"
  emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§PEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
- investigate_heresy_title: "Investigate Heresy"
- investigate_heresy_tooltip: "Investigate heresy in their court, demanding them to return to true ways."
- investigate_heresy_desc: "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
- investigate_heresy_dialog: "[emperor.GetName] wants to investigate us for heresy. If we accept we will convert to our faith and they willgain §Y100§! Imperial Allegiance. If we decline, they will get §Yholy war§! casus belli against us."
+ investigate_heresy_emperor_title: "Investigate Heresy"
+ investigate_heresy_emperor_tooltip: "Investigate heresy in their court, demanding them to return to true ways."
+ investigate_heresy_emperor_desc: "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
+ investigate_heresy_emperor_dialog: "[emperor.GetName] wants to investigate us for heresy. If we accept we will convert to our faith and they willgain §Y100§! Imperial Allegiance. If we decline, they will get §Yholy war§! casus belli against us."
  HAS_REFORMATION_CENTER: "Has at least 1 reformation center"
 
  emperor_establish_proper_bureaucracy_title: "Establish Proper Bureaucracy"
