--- a/localisation/cossacks_l_english.yml
+++ b/localisation/cossacks_l_english.yml
@@ -826,7 +826,7 @@
  EST_VAL_BURGHER_PROTO_CAPITALISTS: "Growth of the Putting-Out System: §Y$VAL$%§!"
  EST_VAL_BURGHER_BYPASSING_EMBARGO: "Right to Bypass Trade Restrictions: §Y$VAL$%§!"
  EST_VAL_BURGHER_DENIED_BYPASS_OF_EMBARGO: "Denied Right to Bypass Trade Restrictions: §Y$VAL$%§!"
- EST_VAL_PAPAL_CONTROLLER: "Papal Controller: §Y$VAL$%§!"
+ EST_VAL_PAPAL_CONTROLLER: "Episcopal Controller: §Y$VAL$%§!"
  EST_VAL_SERFS_DEFECTING: "Defecting Serfs: §Y$VAL$%§!"
  EST_VAL_SERFS_BROUGHT_BACK: "Hunted Serfs: §Y$VAL$%§!"
  EST_VAL_SERFS_TO_COSSACKS: "Defecting Serfs: §Y$VAL$%§!"
