--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -28,8 +28,8 @@
  HRE_REFORM_PATHS_MUTUALLY_EXCLUSIVE: "Centralization and Decentralization are mutually exclusive path. The Emperor can only go down one path!"
  FORCED_MARCH_STATIONARY: "If army is stationed in one province, morale will recover and reinforcements will reach regiments."
  FABRICATE_CLAIM_ENTRY_TT: "This will reduce our spy-network by $VAL|Y$ due to:\n$WHY$"
- PAPAL_BULL_POSSIBLE: "§YGolden Bulls§!\nThese a the possible golden bulls that the Papal controller can enact.\n"
- PAPAL_BULL_EXPLANATION: "Golden Bulls are bonuses that the Papal Controller can enact using the Curia Coffers that benefits all Catholic Countries! They last until the current Pope dies."
+ PAPAL_BULL_POSSIBLE: "§YGolden Bulls§!\nThese a the possible golden bulls that the Episcopal controller can enact.\n"
+ PAPAL_BULL_EXPLANATION: "Golden Bulls are bonuses that the Episcopal Controller can enact using the Curia Coffers that benefits all Liemarian Countries! They last until the current Episcopus dies."
  JUSTIFY_TRADE_BASE: "The Cost for Justify Trade Conflict is based upon:\nBase Cost: $VAL|Y0$\n"
  FABRICATE_CLAIM_BASE: "The Cost for Fabricate Claim is based upon:\nBase Cost: $VAL|Y0$\n"
  FABRICATE_CLAIM_INSIDE_HRE: "Inside SE: $VAL|-=1%$\n"
@@ -47,7 +47,7 @@
  COUNCIL_OF_TRENT_EXPLANATION: "The The Great Synod lasts until all doctrines have been decided, or until a few decades have passed."
  WE_ARE_NEUTRAL_IN_COUNCIL: "We are currently neutral in the Council, which gives us the following effect:\n$EFFECT$"
  OTHERS_ARE_NEUTRAL_IN_COUNCIL: "The countries that are neutral in the Council gain the following effect:\n$EFFECT$"
- PAPAL_BULL_NOT_CURIA_CONTROLLER: "§RYou are not the Papal Controller. Only the Papal Controller can spend the Curia Coffers to enact a Golden Bull.§!"
+ PAPAL_BULL_NOT_CURIA_CONTROLLER: "§RYou are not the Episcopal Controller. Only the Episcopal Controller can spend the Curia Coffers to enact a Golden Bull.§!"
  DISCILINE_FOR_MERC: "These mercenaries have an additional $VAL|+=%2$ discipline due to:\n"
  RULER_AS_GENERAL: "Ruler as General"
  RULER_AS_GENERAL_DESC: "While a Ruler is not costing anything extra for the country to use as a general, it comes with the added risk of dying on the battlefield."
@@ -404,17 +404,17 @@
  CARDINAL_TOTAL_CARDINAL: "Total of $NUM$ Cardinals in Curia: $VAL|+=$¤\n"
  CARDINAL_TARGET_CARDINAL: "$NUM$ Cardinals from $NAME$: $VAL|+=$¤\n"
  APPOINT_CARDINALTITLE: "Appoint Cardinal"
- APPOINT_CARDINALDESC: "Appoint a Cardinal in the target Country, increasing their opinion of us and increasing the Invested Influence for the next Papal Controller election."
- APPOINT_CARDINAL_DESCRIPTION: "Invest $COST|Y$¤ to Appoint a Cardinal in $RECIPIENT$ land. This is a great honor and they will owe us a debt of gratitude, increasing their opinion of us by $OPINION|G$.\n\nOur Invested influence towards becoming the next Papal Controller will be increased by $INFLUENCE|Y$."
+ APPOINT_CARDINALDESC: "Appoint a Cardinal in the target Country, increasing their opinion of us and increasing the Invested Influence for the next Episcopal Controller election."
+ APPOINT_CARDINAL_DESCRIPTION: "Invest $COST|Y$¤ to Appoint a Cardinal in $RECIPIENT$ land. This is a great honor and they will owe us a debt of gratitude, increasing their opinion of us by $OPINION|G$.\n\nOur Invested influence towards becoming the next Episcopal Controller will be increased by $INFLUENCE|Y$."
  APPOINT_CARDINAL_NOT_IN_SUBJECTS_DIEING: "§R- Cardinals cannot be appointed in Countries that we are about to annex.§!"
  APPOINT_CARDINAL_ONLY_CATHOLICS: "§RCardinals can only be appointed in Countries that follow the true Catholic faith.§!"
  APPOINT_CARDINAL_TOO_MANY_IN_COUNTRY: "§RNo more than $MAX$ Cardinals can be appointed in the same country.§!"
  APPOINT_CARDINAL_TOO_MANY_IN_WORLD: "§RThere are already enough Cardinals in the World, Appointing one more would destabilize our God-inspired authority.§!"
  APPOINT_CARDINAL_NO_PROVINCE_AVAILABLE: "§RThere are no suitable Provinces for us to Appoint a Cardinal.§!"
  APPOINT_CARDINAL_NEED_MORE_CASH: "§RAppointing a Cardinal will cost $REQUIRED$¤ but you only have $AVAILABLE$¤.§!"
- CURIA_APPOINT_CARDINAL: "Spend $COST|Y$¤ of your own money to Appoint one of your loyalists as Cardinal. This will give us $CORRUPTION|R$ Corruption and increase our Invested influence towards becoming the next Papal Controller by $INFLUENCE|Y$ every year."
+ CURIA_APPOINT_CARDINAL: "Spend $COST|Y$¤ of your own money to Appoint one of your loyalists as Cardinal. This will give us $CORRUPTION|R$ Corruption and increase our Invested influence towards becoming the next Episcopal Controller by $INFLUENCE|Y$ every year."
  CURIA_APPOINT_CARDINAL_SELF_TITLE: "Appoint loyalist Cardinal"
- CURIA_APPOINT_CARDINAL_SELF_DESC: "Do you want to spend $COST|Y$¤ to Appoint one of your loyalists as Cardinal? This will give us $CORRUPTION|R$ Corruption and increase our Invested influence towards becoming the next Papal Controller by $INFLUENCE|Y$ every year."
+ CURIA_APPOINT_CARDINAL_SELF_DESC: "Do you want to spend $COST|Y$¤ to Appoint one of your loyalists as Cardinal? This will give us $CORRUPTION|R$ Corruption and increase our Invested influence towards becoming the next Episcopal Controller by $INFLUENCE|Y$ every year."
  # Golden Bulls
  CURIA_GOLDEN_BULL_MECHANIC: "Enables $MECHANIC|Y$"
  CURIA_GOLDEN_BULL_TRIGGER_DESC: "§YRequirements:§!"
@@ -854,7 +854,7 @@
  USE_CURIA_TREASURY_DESC: "As the Curia Controller you have access to the Curia Treasury."
  REFORM_DESIRE_SCALE_EFFECT: "Reform Desire will grow $PERC|%-0$ $DIRECTION$.\n"
  REFORM_DESIRE_SCALE_TOOLTIP: "Because of our actions we've agitated reformers causing §YReform Desire§! to grow $SCALE|%-0$ faster."
- investigate_heresy: "Investigate Heresy"
+ investigate_heresy: "Promote Unified Thought"
  MIL_CONST_MERCENARY_TIP: "$MERC|Y$ will be fielded here on $DATE|Y$."
  building_soldier_households: "Soldier's Households"
  building_ramparts: "Ramparts"
