--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -130,9 +130,9 @@
  communalist_school_desc: ""
  communalist_scholar_modifier: "Communalist Scholar"
 
- is_school_enabled_reinist_school: "Reinist school of thought is active."
- is_school_enabled_palmisianist_school: "Palmisianist school of thought is active."
- is_school_enabled_angelist_school: "Angelis school of thought is active."
- is_school_enabled_cesaronist_school: "Cesaronist school of thought is active."
- is_school_enabled_gentenist_school: "Gentenist school of thought is active."
- is_school_enabled_communalist_school: "Communalist school of thought is active."
+ is_school_enabled_reinist_school: "§YReinist§! school of thought is active."
+ is_school_enabled_palmisianist_school: "§YPalmisianist§! school of thought is active."
+ is_school_enabled_angelist_school: "§YAngelist§! school of thought is active."
+ is_school_enabled_cesaronist_school: "§YCesaronist§! school of thought is active."
+ is_school_enabled_gentenist_school: §Y"Gentenist§! school of thought is active."
+ is_school_enabled_communalist_school: "§YCommunalist§! school of thought is active."
