--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -134,5 +134,5 @@
  is_school_enabled_palmisianist_school: "§YPalmisianist§! school of thought is active."
  is_school_enabled_angelist_school: "§YAngelist§! school of thought is active."
  is_school_enabled_cesaronist_school: "§YCesaronist§! school of thought is active."
- is_school_enabled_gentenist_school: §Y"Gentenist§! school of thought is active."
+ is_school_enabled_gentenist_school: "§YGentenist§! school of thought is active."
  is_school_enabled_communalist_school: "§YCommunalist§! school of thought is active."
