i want to kill myself

--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -130,9 +130,21 @@
  communalist_school_desc: ""
  communalist_scholar_modifier: "Communalist Scholar"
 
+ TD_change_school_liemarian_tt: "Change School of Thought"
  is_school_enabled_reinist_school: "§YReinist§! school of thought is active."
  is_school_enabled_palmisianist_school: "§YPalmisianist§! school of thought is active."
  is_school_enabled_angelist_school: "§YAngelist§! school of thought is active."
  is_school_enabled_cesaronist_school: "§YCesaronist§! school of thought is active."
  is_school_enabled_gentenist_school: "§YGentenist§! school of thought is active."
  is_school_enabled_communalist_school: "§YCommunalist§! school of thought is active."
+ is_any_school_enabled_tt: "Any school of thought is active."
+
+ liamrian.100.tt: "You will be able to change your school of thought, but only to those that are already present in the world."
+ liemarian.100.t: "A Matter of Faith"
+ liemarian.100.desc: "REPLACE_ME"
+ liemarian.100.a: "Palmisianist - to return to the roots"
+ liemarian.100.b: "Reinist - to cleanse the world"
+ liemarian.100.c: "Angelist - to build a nation"
+ liemarian.100.d: "Cesaronist - for a unified church"
+ liemarian.100.e: "Gentenist - to spread the true word"
+ liemarian.100.f: "Communalist - to find inner truth"
