hre dismantled modifier and effects

--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -148,3 +148,11 @@
  liemarian.100.d: "Cesaronist - for a unified church"
  liemarian.100.e: "Gentenist - to spread the true word"
  liemarian.100.f: "Communalist - to find inner truth"
+
+ hre_event.15.t: "The End of the Saelian Empire"
+ hre_event.15.tt: "Every Sigilian country will get a choice if they want to embrace a new religious head."
+ no_emperor_sigilian: "Throne with no Emperor"
+ desc_no_emperor_sigilian: "With the fall of the empire, many are rapidly losing faith in its restoration."
+ hre_event.15.desc: "With the fall of the [Emperor.Capital.GetName], [Emperor.Monarch.GetTitle] [Emperor.Monarch.GetName] had to accept [Emperor.Monarch.GetHerHis] ultimate defeat at the hands of the [Root.GetAdjective] forces. In the year [GetYear], the once prestigious [Emperor.Monarch.GetTitle] signed [Emperor.Monarch.GetHerHis] abdication from the throne of the Saelian Empire and released all imperial states and officials from their oaths and obligations to the empire.\n\nThe Saelian Empire is no more and [Root.Monarch.GetTitle] [Root.Monarch.GetName] shall forever be remembered as its destroyer."
+ hre_event.15.a: "An empire finally put to its overdue rest."
+ hre_event.15.b: "The Empire has fallen. Long live the [Root.GetAdjective] Empire rising from its ashes!"
