--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -62,7 +62,7 @@
 
  emperor_revive_imperial_inquisition_title: "Revive Imperial Inquisition"
  emperor_revive_imperial_inquisition: "Revived Imperial Inquisition"
- emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§PEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
+ emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§YEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
  investigate_heresy_emperor_title: "Investigate Heresy"
  investigate_heresy_emperor_tooltip: "Investigate heresy in their court, demanding them to return to true ways."
  investigate_heresy_emperor_desc: "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
@@ -151,7 +151,7 @@
 
  no_emperor_unify_imperial_infrastructure_title: "Unify The Infrastructure"
  no_emperor_unify_imperial_infrastructure: "Unified Infrastructure"
- no_emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks \"§PExpand Via Caroli§!\" decision\nUnlocks \"§PExpand Via Magreini§!\" decision\n---"
+ no_emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks \"§YExpand Via Caroli§!\" decision\nUnlocks \"§YExpand Via Magreini§!\" decision\n---"
  no_emperor_unify_imperial_infrastructure_province: "Unified Infrastructure" 
 
  no_emperor_establish_permanent_parliament_title: "Establish Permanent Diet"
@@ -160,7 +160,7 @@
 
  no_emperor_revive_imperial_inquisition_title: "Revive Imperial Inquisition"
  no_emperor_revive_imperial_inquisition: "Revived Imperial Inquisition"
- no_emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§PEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
+ no_emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§YEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
 
  no_emperor_establish_standing_army_title: "Establish Standing Army"
  no_emperor_establish_standing_army: "Established Standing Army"
@@ -301,6 +301,7 @@
  edict_pro_unitate_title: "Edict Pro Unitate"
  edict_pro_unitate_desc: "Also known as 'Pro unitate nostrae communitatis Saelianae et prosperitatem aeternam omnibus hominibus terrenis' was a major component of keeping religious unity in the empire throughout the XVI and XVII centuries."
  sigilian_center_of_reformation: "Center of Counter-Reformation"
+ edict_pro_unitate_tt: "Spawns a §YSigilian§! center of counter-reformation in §Y[Root.Capital.GetName]§!."
 
  saelian.11.t: "Renovatio Imperii Saelianum"
  saelian.11.desc: "In the year of our lord, [GetYear], the most serene Augustus [Emperor.Monarch.GetName], Saelianum Imperator, crowned by God, has again convened the Estates of the Saelian Empire. The Diet has agreed to a motion to unite the disparate states of The Empire into a nation state and recrown the [Emperor.Monarch.GetTitle] as its true ruler."
@@ -512,7 +513,7 @@
  SE_incident.100.t: "Regnum Gyrdianicum"
  SE_incident.100.desc: "The question of whether people of Gyrdia should be allowed to join the empire was always a heated debate. Staunch sigilianists believe that they are to prone to heresy and will never follow the true spirit of Saelianism, but many see in them hope for other nations to be more represented in the empire.\n Recently, the [regnum_gyrdianicum_ET.GovernmentName] of [regnum_gyrdianicum_ET.GetName] has offered the emperor to purchase the claim on the Kingdom of Gyrdia in exchange for gold and solely managing all military actions. The emperor commenced the emergency diet, knowing this would spark a controversial debate."
  SE_incident.100.a: "We need to bring order in Gyrdia"
- SE_incident.100.a_tt: "Gain claims on all provinces of Gyrdian culture.\n Emperor will be much more likely to grant the kingship."
+ SE_incident.100.a_tt: "Gain claims on all provinces of Gyrdian culture.\nEmperor will be much more likely to grant the Kuninstofship."
  SE_incident.100.b: "They do not deserve the claim."
  SE_incident.100.c: "The Gyrdians are our friends"
  SE_incident.101.t: "Imperial Proposal"
@@ -658,8 +659,8 @@
  TD_SIS_Mint_without_Gold: "Imperial Mint"
  disaster_sis_decay.15.c: "Unify the Infrastructure"
  TD_SIS_Unified_Infrastructure: "Unified the Infrastructure"
- TD_SIS_Unlock_Via_Caroli_tt: "Unlocks \"§PExpand Via Caroli§!\" decision"
- TD_SIS_Unlock_Via_Magreini_tt: "Unlocks \"§PExpand Via Magreini§!\" decision"
+ TD_SIS_Unlock_Via_Caroli_tt: "Unlocks \"§YExpand Via Caroli§!\" decision"
+ TD_SIS_Unlock_Via_Magreini_tt: "Unlocks \"§YExpand Via Magreini§!\" decision"
  decision_sis_decay_reforms_economy_title: "Institute Economical Reforms"
  decision_sis_decay_reforms_economy_desc: "Our economical backbone needs to be improved and adapted to the changing political situation."
  SIS_DECAY_Has_Not_Finished_Economical_Reforms_tt: "Has not finished the Economical Reforms"
@@ -747,17 +748,17 @@
  decision_sis_decay_question_of_diet_title: "Question of Imperial Diet"
  decision_sis_decay_question_of_diet_desc: "Imperial diet served the emperors for centuries, but we have to decide whether this institution is worthy of our new empire."
  TD_SIS_Call_emergency_diet_tt: "§GWe shall decide the fate of Imperial Diet§!"
- TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt: "Unlocks \"§PEstablish Perpetual Diet§!\" decision"
+ TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt: "Unlocks \"§YEstablish Perpetual Diet§!\" decision"
  decision_sis_decay_establish_perpetual_diet_title: "Establish Perpetual Diet"
  decision_sis_decay_establish_perpetual_diet_desc: "Diet will now convene in a single, unchangeable location, to centralize the power in one place."
  TD_SIS_Establish_Permanent_Diet: "Established Permanent Diet"
  desc_TD_SIS_Establish_Permanent_Diet: "The Tetrarchy has established a permanent diet which will periodically convene in the same location."
- TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks \"§PHold Imperial Diet§!\" decision"
+ TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks \"§YHold Imperial Diet§!\" decision"
  decision_hold_diet_sis_title: "Hold Imperial Diet"
  decision_hold_diet_sis_desc: "Hold the imperial diet in order to resolve critical to the health of the empire issues."
  TD_SIS_Holding_the_diet: "Holding the Imperial Diet"
  desc_TD_SIS_Holding_the_diet: "The Empire is currently in the process of discussing various important matters."
- TD_SIS_Decay_Unlock_Saelian_Council_decision_tt: "Unlocks \"§PEstablish Saelian Council§!\" decision"
+ TD_SIS_Decay_Unlock_Saelian_Council_decision_tt: "Unlocks \"§YEstablish Saelian Council§!\" decision"
  decision_sis_decay_establish_saelian_council_title: "Establish Saelian Council"
  decision_sis_decay_establish_saelian_council_desc: "Saelian council will help us restore the glory of our empire and bring a fresh wind to the ancient empire."
  TD_SIS_Establish_Saelian_Council: "Established Saelian Council"
