--- a/localisation/aow_l_english.yml
+++ b/localisation/aow_l_english.yml
@@ -76,13 +76,13 @@
  PEACEOFFER_HRE_RELIGIOUS_PEACE: "This deal will establish Religious Peace in the Empire."
  NO_OBJECTIVE: "No Objective"
  HRE_RELIGIOUS_WAR: "§YReligious War§!"
- HRE_RELIGIOUS_WAR_DESC: "The Saelian Empire is in a state of Religious War between the Catholic and Protestant faiths. During a Religious War, the Protestant and Catholic Leagues are available to be joined. The League that does not follow the dominant faith in the Empire may declare war on the Emperor to attempt to change the Empire's dominant faith."
+ HRE_RELIGIOUS_WAR_DESC: "The Saelian Empire is in a state of Religious War between the old Sigilian order and Liemarian revolutionaries. During a Religious War, the Imperial and Liemarian Leagues are available to be joined. The League that does not follow the dominant faith in the Empire may declare war on the Emperor to attempt to dismantle it."
  HRE_RELIGIOUS_PEACE: "§YReligious Peace§!"
  HRE_RELIGIOUS_PEACE_DESC: "A treaty of permanent religious peace has been established in the Empire. The Princes of the Empire are free to choose their own confession, and the Emperor may be of any faith."
  HRE_OFFICIAL_RELIGION: "§Y$RELIGION$§! is the Dominant Faith"
  HRE_OFFICIAL_RELIGION_DESC: "The §Y$RELIGION$§! religion is the dominant faith of the Saelian Empire. Only §Y$RELIGION$§! rulers are eligible to become Emperor."
  HRE_PERMANENT_RELIGION: "§Y$RELIGION$§! is the Official Faith"
- HRE_PERMANENT_RELIGION_DESC: "The §Y$RELIGION$§! religion is the official faith of the Saelian Empire. Only §Y$RELIGION$§! rulers are eligible to become Emperor and all Electors must be §Y$RELIGION$§! as well. The Emperor may use the Enforce Religious Unity diplomatic action on member states of a different confession."
+ HRE_PERMANENT_RELIGION_DESC: "The §Y$RELIGION$§! religion is the official faith of the Saelian Empire. Only §Y$RELIGION$§! rulers are eligible to become Emperor and all Electors must be §Y$RELIGION$§! as well. The Emperor may use the Enforce Religious Unity diplomatic action on member states of a different confession."
  HRE_LEAGUE_MEMBER: "§Y$COUNTRY$§! is a member of §YThe $RELIGION$ League§!."
  HRE_LEAGUE_LEADER: "§Y$COUNTRY$§! is the leader of §YThe $RELIGION$ League§!."
  HRE_LEAGUES_ENABLED: "The §YProtestant§! and §YCatholic§! Leagues are enabled."
