--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -6173,7 +6173,7 @@
  FINANCIAL_WAR_NAME: "$ORDER$$FIRST$-$SECOND$ War of Recompense"
  SPY_WAR_NAME: "$ORDER$$FIRST$ War over $SECOND$ Provocation"
  SPREAD_REVOLUTION_NAME: "$ORDER$$FIRST$ Revolutionary War against $SECOND$"
- RELIGIOUS_LEAGUE_WAR_NAME: "$ORDER$War of the $FIRST_RELIGION$ League"
+ RELIGIOUS_LEAGUE_WAR_NAME: "$ORDER$War of the $FIRST_RELIGION$ Coalition"
  VASSAL_WAR_NAME: "$ORDER$$FIRST$-$SECOND$ Vassalization War"
  DOF_WAR_NAME: "$ORDER$$FIRST_RELIGION$ Defender War"
  HRE_DEFENSE_WAR_NAME: "$ORDER$Saelian Intervention"
