--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -156,3 +156,38 @@
  hre_event.15.desc: "With the fall of the [Emperor.Capital.GetName], [Emperor.Monarch.GetTitle] [Emperor.Monarch.GetName] had to accept [Emperor.Monarch.GetHerHis] ultimate defeat at the hands of the [Root.GetAdjective] forces. In the year [GetYear], the once prestigious [Emperor.Monarch.GetTitle] signed [Emperor.Monarch.GetHerHis] abdication from the throne of the Saelian Empire and released all imperial states and officials from their oaths and obligations to the empire.\n\nThe Saelian Empire is no more and [Root.Monarch.GetTitle] [Root.Monarch.GetName] shall forever be remembered as its destroyer."
  hre_event.15.a: "An empire finally put to its overdue rest."
  hre_event.15.b: "The Empire has fallen. Long live the [Root.GetAdjective] Empire rising from its ashes!"
+
+ end_the_empire_decision_title: "End the Empire"
+ end_the_empire_decision_desc: "The age of the emperors must come to an end. Soon the world will breathe without the imperial tyranny and the new liemarian order will rise."
+ liemarian.200.t: "Proclamation of the Liemarian Coalition"
+ liemarian.200.desc: "During the most recent conclave, after hours of debating, the cardinals of the Episcopate have finally agreed to put an end to the tyranny of the empire. Letters were sent across the entire continent to call all warriors of the Liemarian faith to support them in their endeavor. While both sides are rapidly increasing their military prowess and preparing fortifications, many are bracing themselves for a conflict of a scale that Mysentria has never seen before."
+ liemarian.200.a: "Let's start gathering the forces."
+
+ liemarian.201.t: "Proclamation of the Liemarian Coalition"
+ liemarian.201.desc: "News of the Liemarian coalition startled many of our ministers and princes. An emergency diet was quickly called and soon after an alliance opposing the new coalition - Imperial League - was formed, with Legates ordered to gather as many states as they can to join the obviously righteous cause."
+ liemarian.201.a: "We need to prepare for the worst."
+
+ liemarian.202.t: "Emperor Calls to War"
+ liemarian.202.desc: "The emperor [Emperor.Monarch.GetName] has requested that we join their side in case of a potential Liemarian-Imperial War."
+ liemarian.202.a: "We will fight the infidels."
+ liemarian.202.b: "There are more important matters at hand."
+
+ liemarian.203.t: "Episcopus Calls to War"
+ liemarian.203.desc: "The emperor [Emperor.Monarch.GetName] has requested that we join their side in case of a potential Liemarian-Imperial War."
+ liemarian.203.a: "We will fight the infidels."
+ liemarian.203.b: "There are more important matters at hand."
+
+ liemarian.204.t: "End of the Coalition War"
+ liemarian.204.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\n\nThe unexpected imperial victory has caused a turmoil in Liemarian states, while the emperor is preparing his triumphant march across the [Emperor.Capital.GetName]. Once rebellious subjects have been forced to return to follow the only true rite.\n\nWhile some people expect the imperial prosperity not to last long, one thing is certain - a balance of power has once again shiften in Mysentria."
+ liemarian.204.a: "To a Thousand years more."
+ saelia_invicta_mod: "Saelia Invicta"
+ desc_saelia_invicta_mod: "Victory in the League war has showed the people of Mysentria that the empire will thrive for a thousand more years."
+ claim_hre_provinces_league_effect_tt: "Gain permanent claim on every imperial province owned by members of the Liemarian League."
+
+ liemarian.205.t: "End of the Coalition War"
+ liemarian.205.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\n\nThe stalemate and prolonged devastation has led both sides to agree on peace, retaining the previous status quo.\n\nWhile the treaty didn't change a single thing, the empire might not survive another conflict."
+ liemarian.205.a: "Only a matter of time until a new war breaks out."
+
+ liemarian.206.t: "End of the Coalition War"
+ liemarian.206.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\n\nDespite the hardships, Liemarian Coalition is triumphant, trying to take advantage of their victory as much as they can. Princes and duchies are being relieved of the emperor's fist and many states try to consolidate their kingdoms.\n\nWith this victory, the ancient empire has finally been put to rest, letting new states prosper on its grave."
+ liemarian.206.a: "Let a new world rise from the ashes of the empire."
