--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -287,7 +287,7 @@
 
  unite_saelians_title: "Unify Saelianism"
  unite_saelians_desc: "Bringing Unity to the Saelian faith will solidify us as the rulers of the world. Pro Deo!"
- saelianism_united_mod: "Saelia Invicta"
+ saelianism_united_mod: "Saelia Indivisibilis"
  desc_saelianism_united_mod: "The saelian faith has been broken for centuries, leading to bretherens fighting each other. Thankfully, these dark times have come to and end and a new Saelian golden age can begin."
  random_conversion_tt: "Every Saelian province will have a 33% chance to convert to our religion."
  hre_modifier_tt: "Reform modifier will be transfered to our newly unified nation."
