--- a/localisation/aow_l_english.yml
+++ b/localisation/aow_l_english.yml
@@ -63,10 +63,10 @@
  AUTONOMY_DEC_NO_EFFECT: "Decreasing autonomy would have no effect since the minimum value is §Y$MAX$%§!."
  INC_AUTONOMY_TEXT: "Increase autonomy with $AMOUNT$ in §Y$WHERE$§!, giving '§Y$WHAT$§W' until §Y$DATE$§W, giving the following effects:\n$EFFECT$\n\n"
  DEC_AUTONOMY_TEXT: "Decrease autonomy with $AMOUNT$ in §Y$WHERE$§!, giving '§Y$WHAT$§W' until §Y$DATE$§W, giving the following effects:\n$EFFECT$\n\n"
- ENABLE_HRE_LEAGUES: "The §YProtestant§! and §YCatholic§! Leagues will be enabled."
- DISABLE_HRE_LEAGUES: "The §YProtestant§! and §YCatholic§! Leagues will be disabled."
- LOCK_HRE_RELIGION: "§Y$RELIGION$§! becomes the official faith of the Saelian Empire."
- UNLOCK_HRE_RELIGION: "§Y$RELIGION$§! will no longer be the official faith of the Saelian Empire."
+ ENABLE_HRE_LEAGUES: "The §YSigilian§! and §YLiemarian§! Leagues will be enabled."
+ DISABLE_HRE_LEAGUES: "The §YSigilian§! and §YLiemarian§! Leagues will be disabled."
+ LOCK_HRE_RELIGION: "§Y$RELIGION$§! will be victorious in the Religious wars."
+ UNLOCK_HRE_RELIGION: "§Y$RELIGION$§! will be victorious in the Religious wars."
  TREATY_HRE_RELIGION: "The Saelian Empire will sign a §YTreaty of Religious Peace§!."
  BREAK_TREATY_HRE_RELIGION: "The Saelian Empire's §YTreaty of Religious Peace§! will be broken."
  HRE_RELIGION_NOT_LOCKED: "An official faith has not been established in the Saelian Empire."
@@ -553,7 +553,7 @@
  REVOLUTION_TARGET_DESC: "While the revolution is happening, this country will get $SCORE|+0%$ more score."
  FOLLOWING_EFFECTS: "This has the following effects:"
  PEACE_DISMANTLE_REVOLUTION: "Dismantle the Revolution"
- PEACE_CHANGE_HRE_RELIGION: "Religious Supremacy"
+ PEACE_CHANGE_HRE_RELIGION: "§VReligious Supremacy§!"
  DISMANTLE_REVOLUTION: "The revolution will end and $WHO$ will return to being a Monarchy."
  REVOLUTIONARY_NAME: "Revolutionary $NAME$"
  REVOLUTIONARY_SHORT_NAME: "Rev. $NAME$"
@@ -961,6 +961,8 @@
  abolition_of_serfdom_desc: "In 1746 serfdom was abolished in Wallachia, vastly decreasing the number of serfs fleeing to Transylvania."
  CANNOT_JOIN_LEAGUE_AT_LEAGUE_WAR: "§R- We cannot join or leave a League while there is a League War raging.§!"
  CANNOT_JOIN_LEAGUE_AT_WAR: "§R- We cannot join or leave a League while at war.§!"
+ LEAGUE_WRONG_RELIGION: "Only Saelian countries may join Religious Leagues."
+ LEAGUE_WRONG_RELIGION_ENERATIAN: "Matters of the false empire are beneath us."
  CANNOT_JOIN_LEAGUE_TRUCE_WITH_EMPEROR: "§R- We cannot join this League while we have a truce with the Emperor.§!"
  EMPEROR_CANNOT_JOIN_LEAGUE: "§R- The Emperor cannot join or leave a League.§!"
  NOT_DISCOVERED_HRE: "§R- We have not discovered the Saelian Empire!§!"
